# guggr

./: .editorconfig  .env.example  .gitignore  .gitlint  .golangci.yaml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .tool-versions  CHANGELOG.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Containerfile.frontend  Dockerfile.frontend  Dockerfile.rust  README.md  SECURITY.md  buf.gen.yaml  compose.prebuilt.yaml  compose.yaml  flake.nix  go.work  go.work.sum  index.html  index.yaml  justfile  nginx.conf  openapitools.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.config/: nextest.toml
.dummy/: Cargo.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yaml  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  ci-basic.yaml  cleanup_cache.yaml  lint.yaml  pr.yaml  release-chart.yaml  release-please.yaml
agent/: .env.example  Cargo.toml  agent.just  go.mod  go.sum
agent/cmd/agent/: main.go
agent/cmd/createmessages/: main.go
agent/cmd/helper/: createmessages.go
agent/internal/adapters/inbound/rabbitmq/: adapter.go  rabbitmq.go
agent/internal/adapters/outbound/http/: adapter.go  http.go  http_test.go
agent/internal/adapters/outbound/ping/: adapter.go  ping.go
agent/internal/adapters/outbound/rabbitmq/: rabbitmq.go
agent/internal/core/ports/: monitor.go  result.go
agent/internal/core/service/: jobservice.go
agent/internal/core/services/: jobservice.go
agent/src/: lib.rs  main.rs
agent/src/adapters/: mod.rs
agent/src/adapters/inbound/: rabbitmq.rs
agent/src/adapters/outbound/: http.rs  mod.rs  ping.rs  rabbitmq.rs
agent/src/core/: mod.rs
agent/src/core/ports/: mod.rs  monitor.rs  publisher.rs
agent/src/core/service/: jobservice.rs  mod.rs
api-service/: .env.example  Cargo.toml  api-service.just  openapi-check.sh  openapi.json
api-service/src/: gen_openapi.rs  lib.rs  main.rs
api-service/src/adapters/: mod.rs
api-service/src/adapters/inbound/http/: auth.rs  group.rs  groups.rs  job.rs  jobs.rs  mod.rs  role.rs  roles.rs  users.rs
api-service/src/adapters/inbound/http/middleware/: auth.rs
api-service/src/adapters/outgoing/: postgres.rs
api-service/src/adapters/outgoing/postgres/: auth.rs  group.rs  groups.rs  mod.rs  refresh_tokens.rs  role.rs  user.rs  user_group_mapping.rs  users.rs
api-service/src/adapters/outgoing/postgres/job/: detail.rs  mod.rs  run.rs
api-service/src/adapters/outgoing/postgres/job/detail/: http.rs  mod.rs  ping.rs
api-service/src/core/: mod.rs
api-service/src/core/domain/: auth_helper.rs  errors.rs  mod.rs  openapi_helper.rs
api-service/src/core/models/: auth.rs  group.rs  mod.rs  pagination.rs  role.rs  user.rs
api-service/src/core/models/job/: mod.rs  run.rs
api-service/src/core/models/job/http/: detail.rs  mod.rs  result.rs
api-service/src/core/models/job/ping/: detail.rs  result.rs
api-service/src/core/ports/: mod.rs  repository.rs  service.rs  storage.rs
api-service/src/core/services/: auth.rs  groups.rs  mod.rs  users.rs
api-service/src/core/services/job/: run.rs
api-service/src/core/services/jobs/: mod.rs  runs.rs
charts/: Chart.yaml  README.md  index.tmpl  values.yaml
charts/agent/: Chart.yaml  values.yaml
charts/agent/templates/: deployment.yaml
charts/api-service/: Chart.yaml  values.yaml
charts/api-service/templates/: deployment.yaml  service.yaml
charts/charts/: agent-0.1.0.tgz  api-service-0.1.0.tgz  evaluator-0.1.0.tgz  frontend-0.1.0.tgz  rabbitmq-0.19.6.tgz  scheduler-0.1.0.tgz
charts/evaluator/: Chart.yaml  values.yaml
charts/evaluator/templates/: _helpers.tpl  deployment.yaml
charts/frontend/: Chart.yaml  values.yaml
charts/frontend/templates/: deployment.yaml
charts/guggr/: Chart.yaml  README.md  values.yaml
charts/guggr/files/: rabbitmq_definitions.json
charts/guggr/templates/: NOTES.txt  _helpers.tpl  rabbitmq-definitions.yaml
charts/scheduler/: Chart.yaml  values.yaml
charts/scheduler/templates/: deployment.yaml
charts/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/templates/tests/: test-connection.yaml
config/: Cargo.toml
config/src/: agent.rs  api_service.rs  basic.rs  connection_url.rs  lib.rs  postgres.rs  rabbitmq.rs
crates/guggr-protobuf/: build.rs
crates/guggr-protobuf/src/: lib.rs
database/: .env.example  README.md  db.just  schema.dbml  schema.sql
database/database-client/: Cargo.toml
database/database-client/src/: insertable.rs  lib.rs  models.rs  schema.rs
database/design/: schema.dbml
database/scripts/: 01_schema.sql  02_populate.sql.deactivated
docs/: README.md  concepts.md  deployment.md  design.md  development.md  release.md  user.md
evaluator/: .env.example  Cargo.toml  evaluator.just
evaluator/src/: lib.rs  logging.rs  main.rs
evaluator/src/adapters/inbound/: rabbitmq.rs
evaluator/src/adapters/outbound/: postgres.rs
evaluator/src/core/domain/: errors.rs  mod.rs  type_mapper.rs  type_mappers.rs
evaluator/src/core/ports/: database.rs  message_consumer.rs  mod.rs  rabbitmq_driver.rs  storage.rs
evaluator/src/core/service/: evalservice.rs  mod.rs
frontend/web/: README.md  astro.config.ts  docker-entrypoint.sh  init_nginx.sh  nginx.conf  package.json  tsconfig.json
frontend/web/src/: style.css
proto/job/: job.proto
proto/job_types/: job_types.proto
proto/result/: result.proto
rabbitmq/: bad-rabbitmq-definition.json  entrypoint.sh  pretty_rabbitmq_definitions.json  rabbitmq_definitions.json
scheduler/: .env.example  Cargo.toml  scheduler.just
scheduler/src/: lib.rs  main.rs  telemetry.rs
scheduler/src/adapters/inbound/: ticker.rs
scheduler/src/adapters/outbound/: mod.rs  postgres.rs  postgres_token_cleaner.rs  rabbitmq.rs
scheduler/src/core/domain/: errors.rs  mod.rs  models.rs  type_mapper.rs
scheduler/src/core/ports/: job_fetcher.rs  mod.rs  periodic_task.rs  publisher.rs  ticker.rs  token_cleaner.rs
scheduler/src/core/service/: cleanupservice.rs  mod.rs  schedulerservice.rs
(+98 files in other folders)
