[workspace]
members = ["gen/proto_types", "config", "database/database-client", "agent", "evaluator", "scheduler"]
exclude = [".dummy"]

resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Guggr"]

[workspace.dependencies]
prost = "0.14"
gen-proto-types = { path = "gen/proto_types" }
config = { path = "config" }
prost-build = "0.14"
temp-env = "0.3.6"
urlencoding = "2.1.3"
proto-types = "0.2.0"
diesel = "2.3.6"
chrono = "0.4.43"
diesel_migrations = "2.3.1"
thiserror = "2.0.18"
async-trait = "0.1.89"
dotenv = "0.15.0"
reqwest = "0.13.1"
surge-ping = "0.8.4"
httpmock = "0.8.3"
hostname = "0.4.2"
futures-util = "0.3.31"
validator = { version = "0.20", features = ["derive"] }
database-client = { path = "database/database-client" }
tokio = "1.49.0"
rand = "0.10.0"
anyhow = "1.0.100"
nanoid = "0.4.0"
tracing = "0.1.44"
deadpool-lapin = "0.13.1"
lapin = "3.7.2"
futures-lite = "2.6.1"
tracing-subscriber = "0.3.22"
ipnetwork = "0.20.0"
ipnet = "2.11.0"
protify = "0.1.0"
protify-build = "0.1.0"
tokio-util = "0.7.18"
serde = "1.0.228"
