[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
gen-proto-types.workspace = true
tracing = { workspace = true }
protocheck = { workspace = true }
rand = { workspace = true }
surge-ping = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
thiserror = { workspace = true }
config = { workspace = true }
dotenv = { workspace = true }
lapin = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
prost = { workspace = true }
futures-lite = { workspace = true }
