[package]
name = "api-service"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
database-client = {workspace = true}
diesel = { workspace = true, features = ["postgres", "chrono"] }
tracing  = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
actix-web = { workspace = true }
serde = {workspace = true}
nanoid = {workspace = true}
utoipa = { workspace = true , features = ["actix_extras", "chrono"] }
utoipa-actix-web = { workspace = true }
utoipa-swagger-ui = { workspace = true , features = ["actix-web"] }
tracing-actix-web = { workspace = true }
frunk = { workspace = true }
frunk_core = { workspace = true }
argon2 = { workspace = true }
compact_jwt = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
garde-actix-web = { workspace = true }
garde = { workspace = true , features = ["email"] }
ipnet = { workspace = true }
[package.metadata.cargo-machete]
ignored = ["frunk_core"]
