[package]
name = "database-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true, features = ["chrono", "postgres", "r2d2", "ipnet-address"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
ipnet = { workspace = true }
thiserror = { workspace = true }
