[package]
name = "database-client"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
chrono = { workspace = true , features = ["serde"] }
diesel = { workspace = true, features = ["chrono", "postgres", "r2d2", "ipnet-address"] }
diesel_migrations = { workspace = true, features = ["postgres"] }
ipnet = { workspace = true , features = ["serde"] }
thiserror = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true , features = ["chrono"] }
